# ebb-app

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  components.json  index.html  notification-blocked-app.html  notification-session-end.html  notification-session-start.html  notification-session-warning.html  notification.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cursor/rules/: use-alias.mdc
.github/scripts/: process_dmg_releases.js
.github/workflows/: build.yaml  build.yml  build_and_publish.yaml  minor_version.yaml  notify_release.yaml  patch_version.yaml  test.yaml
activities-service/: Cargo.toml
activities-service/migrations/: 20241206033646_create_activities.sql
activities-service/src/: lib.rs  main.rs  system_monitor.rs  window_monitor.rs
activities-service/src/db/: activities_repo.rs  db_manager.rs  mod.rs  models.rs
activities-service/src/db/models/: activity.rs  activity_state.rs  mod.rs
activities-service/src/services/: activity_service.rs
activity-service/: Cargo.toml  build.rs
activity-service/migrations/: 20241003221416_add_user.sql  20241206033646_create_activities.sql
activity-service/src/: main.rs
cc-logger/: Cargo.toml
cc-logger/src/: lib.rs  main.rs
e2e/: home.spec.ts  login.spec.ts
monitor/: Readme.md
monitor/src/: bindings.rs  event.rs  lib.rs  main.rs  utils.rs
monitoring-service/: Cargo.toml  Readme.md
monitoring-service/migrations/: 20241206033646_create_activities.sql  20241213183009_create_activity_state.sql
monitoring-service/src/: lib.rs  main.rs  monitor_callback.rs
public/: auth-success.html  auth_success.tsx  license_callback.tsx  spotify-success.tsx  spotify_success.tsx  vibes.tsx
scripts/: deploy-functions.sh  generate_seed_migration.js  os-monitor-update.js
server/: API_README.md  TESTING.md  index.ts  package.json
server/controllers/: UserController.ts
server/repos/: UserProfile.ts
server/services/: UserProfileService.ts
server/tests/: setup.ts
src/: App.css  App.tsx  CLAUDE.md  Monitor.tsx  Notification.tsx  Notifications.css  TestThread.tsx  main.tsx  notification-main.tsx  routes.tsx
src-tauri/: CLAUDE.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/ebb_tide_manager/src/: lib.rs  tide_service.rs  time_helpers.rs
src-tauri/icons/: icon.icns
src-tauri/notifications/html/: notification-blocked-app.html  notification-session-end.html  notification-session-start-smart.html  notification-session-start.html  notification-session-warning.html
src-tauri/resources/notifications/html/: notification-blocked-app.html  notification-session-end.html  notification-session-start.html  notification-session-warning.html
src-tauri/src/: autostart.rs  commands.rs  db.rs  lib.rs  main.rs  notification.rs  system_monitor.rs  tray_icon_gen.rs  window.rs  window_monitor.rs
src-tauri/src/database/: migrations.rs
src-tauri/src/ebb_db/: Cargo.toml
src-tauri/src/ebb_db/src/: db.rs  db_manager.rs  lib.rs  migrations.rs  services.rs
src-tauri/src/ebb_db/src/db/: activity_state_repo.rs  device_profile_repo.rs  device_repo.rs  flow_session_repo.rs  models.rs  tag_repo.rs  tide_repo.rs  tide_template_repo.rs  user_profile_repo.rs
src-tauri/src/ebb_db/src/db/models/: activity_state.rs  activity_state_tag.rs  device.rs  device_profile.rs  tag.rs  tide.rs  tide_template.rs  user_profile.rs
src-tauri/src/ebb_db/src/services/: device_service.rs  flow_session_service.rs
src-tauri/src/ebb_db/src/shared_sql_plugin/: commands.rs  error.rs  mod.rs  wrapper.rs
src-tauri/src/ebb_tide_manager/: Cargo.toml  NEXT_STEPS.md
src-tauri/src/ebb_tide_manager/src/: lib.rs  tide_progress.rs  tide_scheduler.rs  tide_service.rs  time_helpers.rs
src/api/: api.ts  ebbApi.ts  monitorApi.ts  platformRequest.ts
src/components/: ActiveDevicesSettings.tsx  AppIcon.tsx  AppKanbanBoard.tsx  AppSelector.tsx  CategoryTooltip.tsx  ColumnWrapper.tsx  CommunityCard.tsx  CommunityPreview.tsx  DifficultyButton.tsx  DifficultySelector.tsx  DraggableAppCard.tsx  EbbProSettings.tsx  ErrorPopover.tsx  FAQ.tsx  FeedbackForm.tsx  FlowSessions.tsx  FriendsAnalyticsPreview.tsx  FriendsComparisonCard.tsx  FriendsPreview.tsx  Layout.tsx  LoadingScreen.tsx  LogoContainer.tsx  ModeToggle.tsx  MusicPlayer.tsx  MusicSelector.tsx  NotificationBanner.tsx  PaywallDialog.tsx  (+25 more)
supabase/: config.toml
(+310 files in other folders)
