[package]
name = "ebb"
version = "0.1.0"
description = "Focus starts here"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_codeclimbers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
dirs = "6.0.0"
ebb-db = { path = "./src/ebb_db" }
log = "0.4.25"
once_cell = "1.19"
os-monitor = { version = "0.4.9" }
os-monitor-service = { version = "0.5.0" }
ril = { version = "0.10", features = ["png"] }
sentry = "0.41.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api", "tray-icon", "image-png" ] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "18ffb9a2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", rev = "c7f4c569" }
tauri-plugin-deep-link = "2.4.0"
tauri-plugin-log = "2.6.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-updater = "2.9.0"
thiserror = "2.0.12"
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.17.0"
url = "2.5.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-global-shortcut = "2.3.0"

[profile.dev]
debug = 0
