[package]
name = "ebb-db"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
log = "0.4.27"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "time"]}
tokio = { version = "1.45.1", features = ["full"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
time = { version = "0.3", features = ["serde"] }
serde_json = "1.0"
serde = "1.0.219"
uuid = { version = "1.17.0", features = ["v4"] }
